--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,107 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+}
+
+div {
+  border: 1px solid #ff0000;
 }
 
 .header {
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  z-index: 0;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.flex_header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.header__logo {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 228px;
+  height: 32px;
+}
+
+.header__title {
+  margin-left: 64px;
+  width: 730px;
+  z-index: 1;
+}
+
+.header__title_text {
+  margin: 0;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+}
+
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+ }
+
+.header__subtitle_text {
+  margin: 0;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 25px;
+}
+
+.header__subtitle_text_link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+}
+
 .header__square-pic {
+  position: absolute;
+  right: 0;
+  top: 64px;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  z-index: -1;
+}
+
+.content {
+
+}
+
+.description{
+
+}
+
+.digits {
+
+}
+
+.feynman {
+
+}
+
+.kaufman {
+
+}
+
+.footer {
+
 }
 
 /* и элемента с модификатором вида ключ-значение */
