--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,16 @@
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
-div {
-  border: 1px solid #ff0000;
-}
-
 .header {
   position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color: #f2f2f2;
-  z-index: 0;
-}
-
-.flex_header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 0;
 }
 
 .header__logo {
@@ -34,19 +27,16 @@ div {
   left: 64px;
   width: 228px;
   height: 32px;
+  z-index: 2;
 }
 
 .header__title {
   margin-left: 64px;
   width: 730px;
-  z-index: 1;
-}
-
-.header__title_text {
-  margin: 0;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
+  z-index: 1;
 }
 
 .header__subtitle {
@@ -54,16 +44,14 @@ div {
   width: 388px;
   left: 64px;
   bottom: 30px;
- }
-
-.header__subtitle_text {
-  margin: 0;
+  margin: 0 auto;
   font-size: 18px;
   font-style: normal;
   line-height: 25px;
-}
+  z-index: 0;
+ }
 
-.header__subtitle_text_link {
+.header__subtitle_link {
   text-decoration: none;
 }
 
@@ -73,6 +61,7 @@ div {
   height: 608px;
   right: 0;
   bottom: 0;
+  z-index: -1;
 }
 
 .header__square-pic {
@@ -82,37 +71,263 @@ div {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  z-index: -1;
-}
-
-.content {
-
+  z-index: -2;
 }
 
 .description{
+  display: flex;
+  justify-content: center;
+}
 
+.two-columns {
+  margin-top: 100px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 auto;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+
+.two-columns__paragraph:nth-of-type(3n) {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 
+.section-title {
+  width: 60%;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  margin: auto auto 20px;
+}
+
+.section-title__theme_dark {
+  color: white;
+}
+
+.section-subtitle {
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 auto;
+}
+
+.section-subtitle__theme_dark {
+  color: white;
+}
+
+.table {
+  width: 1100px;
+  margin: auto;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+  margin-right: 0;
+}
+
+.table__cell_theme_dark {
+  width: 200px;
+  margin-top: 80px;
+  margin-right: 0;
+}
+
+.table__heading {
+  margin: auto auto 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text {
+  margin: 0 auto;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
+.table__text_comment {
+  margin: 20px auto auto;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .feynman {
+  position: relative;
+  height: 890px;
+  background-color: #f2f2f2;
+  z-index: -2;
+}
 
+.feynman__title {
+  margin: 0 auto;
+  padding-top: 100px;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__img {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .kaufman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #000000;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  z-index: -2;
+  overflow: hidden;
+}
 
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -210px;
+  z-index: -1;
 }
 
 .footer {
-
+  background-color: black;
+  min-height: 350px;
+  display: flex;
+  align-items: stretch;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.footer__columns {
+  width: 90%;
+  margin: 0 auto;
+  padding: 60px 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 711px;
+  margin: 0;
+}
+
+.footer__logo {
+  width: 228px;
+  height: 32px;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+}
+
+.footer__column_heading {
+  margin: 0;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column_links {
+  margin: 20px 0 16px 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__column_link {
+  text-decoration: none;
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__columns_social_icons {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
