--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
   max-width: 388px;
   left: 64px;
   bottom: 30px;
-  margin: 0 auto;
+  margin: 0;
   font-size: 18px;
   font-style: normal;
   line-height: 25px;
@@ -135,7 +135,7 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  margin: auto auto 20px;
+  margin: 0 0 20px;
 }
 
 .section-title_theme_dark {
@@ -148,7 +148,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .section-subtitle_theme_dark {
@@ -157,7 +157,7 @@
 
 .table {
   width: 1100px;
-  margin: auto;
+  margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
@@ -189,7 +189,7 @@
 }
 
 .table__text {
-  margin: 20px auto 0;
+  margin: 20px 0 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -227,7 +227,7 @@
 }
 
 .feynman__subtitle {
-  margin: 70px auto 0;
+  margin: 70px 0 0;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
